# carbon-ops

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  audit_schema_v0.1.0.json  cspell.config.yaml  generate_docs.py  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  release.yml  security.yml
examples/: advanced_monitoring.py  aliasing_demo.py  energy_logger_demo.py  ledger_operations.py
scripts/: export_audit_schema.py
src/carbon_ops/: __init__.py  aggregators.py  anomaly.py  carbon_estimator.py  carbon_models.py  cli.py  embodied_carbon_db.py  energy_logger.py  exceptions.py  ledger_writer.py  monte_carlo.py  schemas.py  settings.py  types.py
src/carbon_ops/carbon_taxonomy/: __init__.py  calculations.py  logger.py  models.py
src/carbon_ops/config_loader/: __init__.py  models.py  parsing.py  sources.py
src/carbon_ops/estimation/: __init__.py  configuration.py  defaults.py  engine.py  estimator.py  labeling.py  providers.py  reporting.py  span.py
src/carbon_ops/governor/: __init__.py  client.py  daemon.py  ipc.py  rapl.py  runtime.py  server.py
src/carbon_ops/intensity_provider/: __init__.py  base.py  electricitymaps.py  fallback.py  static.py  uk.py  watttime.py
src/carbon_ops/research/: __init__.py  embodied_carbon_db.py
src/carbon_ops/telemetry/: __init__.py  _psutil_protocols.py  config.py  cpu.py  gpu.py  logger.py  logging_pipeline.py  memory.py  rapl.py
src/carbon_ops/tools/: __init__.py  canonicalize.py  ledger.py  verify.py
tests/: conftest.py  stress_test_ledger.py  test_aggregators.py  test_anomaly.py  test_benchmarks.py  test_carbon_estimator.py  test_carbon_estimator_fuzz.py  test_carbon_intensity_data.py  test_carbon_taxonomy_logic.py  test_cli.py  test_config_loader_advanced.py  test_dependency_policy.py  test_embodied_carbon_db.py  test_energy_logger_import.py  test_energy_logger_monitor.py  test_energy_logger_types.py  test_governor_ipc.py  test_governor_rapl.py  test_governor_runtime.py  test_integration.py  test_intensity_provider_mock.py  test_ledger_concurrent.py  test_monte_carlo.py  test_power_config.py  test_telemetry_config.py  test_telemetry_gpu.py  test_telemetry_logger.py  test_telemetry_logging_pipeline.py  test_telemetry_psutil_readers.py  test_telemetry_rapl.py  test_tools_and_ledger.py  test_verify_ed25519.py  test_verify_signer_plugins.py
