[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-ops"
version = "0.1.1"
description = "Application performance monitor (APM) for energy logging and carbon estimation in Python applications with uncertainty-aware marginal emissions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "scrrlt"}
]
keywords = [
    "application-performance-monitoring",
    "energy-logging",
    "carbon-accounting",
    "carbon-estimation",
    "marginal-carbon",
    "telemetry",
    "gpu-monitoring",
    "cpu-monitoring",
    "memory-profiling",
    "uncertainty-propagation",
    "sustainability",
    "esg",
    "audit-ledger",
    "cryptographic-signing",
    "green-computing",
    "observability",
    "python-library",
    "scope-3",
    "energy-efficiency",
    "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx==0.27.2",
    "pydantic-settings==2.2.1",
    "psutil==5.9.8",
    "cryptography==42.0.7",
    "pydantic==2.6.4",
    "portalocker==2.8.2",
]

[project.optional-dependencies]
gpu = [
    "pynvml==11.5.0",
]
config = [
    "pyyaml==6.0.1",
]
locking = [
    "portalocker==2.8.2",
]

all = [
    "pynvml==11.5.0",
    "pyyaml==6.0.1",
    "portalocker==2.8.2",
]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "black==26.1.0",
    "ruff==0.3.0",
    "mypy==1.9.0",
    "bandit==1.8.6",
    "types-psutil==5.9.5.17",
    "hypothesis==6.98.9",
    "types-PyYAML==6.0.12.20241230",
]

[project.scripts]
carbon-governor = "carbon_ops.governor.daemon:main"

[project.urls]
Homepage = "https://github.com/scrrlt/carbon-ops"
Documentation = "https://github.com/scrrlt/carbon-ops#readme"
Repository = "https://github.com/scrrlt/carbon-ops"
PyPI = "https://pypi.org/project/co2e/"
"Bug Tracker" = "https://github.com/scrrlt/carbon-ops/issues"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"carbon_ops.data" = ["*.json"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert used

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "./src"

[[tool.mypy.overrides]]
module = ["psutil", "yaml", "google.cloud.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["carbon_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
addopts = "-v --cov=carbon_ops.telemetry --cov=carbon_ops.energy_logger --cov-report=term-missing --cov-report=xml --cov-branch --cov-fail-under=90"
